Fix null pointer exception in test